# learn-rs

./: Cargo.toml
src/: closures_example.rs  collections_example.rs  concurrent_example.rs  enum_example.rs  error_example.rs  function_example.rs  generics_example.rs  guessing_game.rs  implementation_example.rs  io_example.rs  iterator_example.rs  lifetime_example.rs  main.rs  match_example.rs  mod_example.rs  oop_example.rs  oop_example2.rs  ownership_example.rs  process_control_example.rs  runtime_example.rs  smart_pointers_example.rs  structure_example.rs  task_example.rs  testing_example.rs  trait_example.rs  variables_example.rs  webserver_example.rs
src/advanced/: macro_example.rs  mode_example.rs  senior_fn_example.rs  senior_trait_example.rs  senior_type_example.rs
